fixed minor alignement issues in the hero section

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -138,14 +138,15 @@ select {
 }
 
 .hero-section.home-hero,
-.hero-section.about-hero {
+.hero-section.about-hero,
+.hero-section.contact-hero {
     position: relative;
-    min-height: 760px;
+    min-height: 820px;
     background-size: cover;
     background-position: center;
     display: flex;
     align-items: center;
-    padding-top: 110px;
+    padding: 120px 0 80px;
 }
 
 .hero-section.home-hero {
